Fixed sizing and alignment issues

--- a/src/assets/styles/badge.css
+++ b/src/assets/styles/badge.css
@@ -1,8 +1,8 @@
 .badge {
-    font-size: clamp(1rem, 1.25vw, 2rem);
+    font-size: clamp(0.8rem, 1vw, 2rem);
     font-family: Comfortaa;
 
-    margin: 1rem;
+    margin: 0.5rem;
     padding: 4px 1rem 4px 1rem;
     /* border color will be set in the component */
     /* border-color: color; */
@@ -18,6 +18,6 @@
 }
 
 .badge:hover {
-    transform: scale(1.5);
+    transform: scale(1.25);
     font-weight: bold;
 }
