--- a/src/assets/styles/card-neon.css
+++ b/src/assets/styles/card-neon.css
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: column;
     width: 16vw;
-    height: 50vh;
+    /* height: 40vh; */
     min-width: 256px;
-    min-height: 40vh;
+    min-height: 378px;
 
     border-style: solid;
     /* BorderColor is now being set in the Card component itself */
@@ -15,20 +15,21 @@
     border-bottom-width: 2px ;
     border-left-width: 0px;
 
-    margin: 2rem;
-    padding: 2rem;
+    margin: 1rem;
+    padding: 1rem;
 
     transition: .5s;
 }
 .card-neon:hover {
-    margin: 4rem;
+    margin: 2rem;
     transform: scale(1.2);
 }
 
 
 .card-heading {
     /* color is being set in the component*/
-    font-size: clamp(1rem, 4vh, 2rem);
+    /* font-size: clamp(1rem, 4vh, 2rem); */
+    font-size: clamp(0.8rem, 6vw, 1.5rem);
     margin-bottom: auto;
     transition: 200ms;
 }
@@ -40,6 +41,8 @@
 
 .skills {
     display: flex;
+    width: 100%;
+    height: 100%;
     flex-wrap: wrap;
     margin-bottom: auto;
 }
